Support loading for button and allow event listener to set it
currently gr-button supports `loading` but did not use it, this change will:

1. use disabled status when loading
2. add a spinner to show when loading is true
3. in repo-access component, set loading to true while promise ongoing
4. also fix the issue with non-zero initial tabindex for gr-button

screenshot: https://imgur.com/a/NCLwb45

Bug: 12421
Change-Id: Ie69c447455d23a118dbe1823c576144e0bca7c2d

--- a/polygerrit-ui/app/elements/admin/gr-repo-access/gr-repo-access.html
+++ b/polygerrit-ui/app/elements/admin/gr-repo-access/gr-repo-access.html
@@ -105,12 +105,12 @@ limitations under the License.
             primary
             class$="[[_computeSaveBtnClass(_ownerOf)]]"
             on-click="_handleSave"
-            disabled$="[[!_modified]]">Save</gr-button>
+            disabled="[[!_modified]]">Save</gr-button>
         <gr-button id="saveReviewBtn"
             primary
             class$="[[_computeSaveReviewBtnClass(_canUpload)]]"
             on-click="_handleSaveForReview"
-            disabled$="[[!_modified]]">Save for review</gr-button>
+            disabled="[[!_modified]]">Save for review</gr-button>
         <template
             is="dom-repeat"
             items="{{_sections}}"
