Use patchRange rather then setting individual properties in _computeDiffURL
This is because basePatchNum can be undefined. This is an
optional property  so its value can be undefined.

Rather then checking individually we now check to see if
patchRange is undefined.

Change-Id: I85edafa2d35f1522680ef3b678cb962371db7fd2

--- a/polygerrit-ui/app/elements/change/gr-file-list/gr-file-list_test.html
+++ b/polygerrit-ui/app/elements/change/gr-file-list/gr-file-list_test.html
@@ -1276,9 +1276,11 @@ limitations under the License.
           project: 'gerrit',
         };
         const path = '//COMMIT_MSG';
-        const patchNum = 1;
+        const patchRange = {
+          patchNum: 1
+        };
         assert.equal(
-            element._computeDiffURL(change, patchNum, 'PARENT', path, false),
+            element._computeDiffURL(change, patchRange, path, false),
             '/c/gerrit/+/1/1//COMMIT_MSG');
       });
 
@@ -1290,10 +1292,12 @@ limitations under the License.
           project: 'gerrit',
         };
         const path = '//COMMIT_MSG';
-        const patchNum = 1;
+        const patchRange = {
+          patchNum: 1
+        };
         assert.equal(
             element._computeDiffURL(
-                change, patchNum, 'EDIT', path, true),
+                change, patchRange, path, true),
             '/c/test/+/1/edit//COMMIT_MSG,edit');
       });
     });
