Use patchRange rather then setting individual properties in _computeDiffURL
This is because basePatchNum can be undefined. This is an
optional property so its value can be undefined.

Rather then checking individually we now check to see if
patchRange is undefined.

Change-Id: I85edafa2d35f1522680ef3b678cb962371db7fd2

--- a/polygerrit-ui/app/elements/change/gr-file-list/gr-file-list.html
+++ b/polygerrit-ui/app/elements/change/gr-file-list/gr-file-list.html
@@ -335,10 +335,11 @@ limitations under the License.
                   aria-label$="[[_computeFileStatusLabel(file.status)]]">
               [[_computeFileStatus(file.status)]]
             </div>
+            <!-- TODO: Remove data-url as it appears its not used -->
             <span
-                data-url="[[_computeDiffURL(change, patchRange.patchNum, patchRange.basePatchNum, file.__path, editMode)]]"
+                data-url="[[_computeDiffURL(change, patchRange, file.__path, editMode)]]"
                 class="path">
-              <a class="pathLink" href$="[[_computeDiffURL(change, patchRange.patchNum, patchRange.basePatchNum, file.__path, editMode)]]">
+              <a class="pathLink" href$="[[_computeDiffURL(change, patchRange, file.__path, editMode)]]">
                 <span title$="[[computeDisplayPath(file.__path)]]"
                     class="fullFileName">
                   [[computeDisplayPath(file.__path)]]
