Use patchRange rather then setting individual properties in _computeDiffURL
This is because basePatchNum can be undefined. This is an
optional property so its value can be undefined.

Rather then checking individually we now check to see if
patchRange is undefined.

Change-Id: I85edafa2d35f1522680ef3b678cb962371db7fd2

--- a/polygerrit-ui/app/elements/change/gr-file-list/gr-file-list_test.html
+++ b/polygerrit-ui/app/elements/change/gr-file-list/gr-file-list_test.html
@@ -1267,6 +1267,40 @@ limitations under the License.
       });
     });
 
+    suite('diff url file list', () => {
+      test('diff url', () => {
+        sandbox.stub(Gerrit.Nav, 'getUrlForDiff').returns(
+            '/c/gerrit/+/1/1/index.php');
+        const change = {
+          _number: 1,
+          project: 'gerrit',
+        };
+        const path = 'index.php';
+        const patchRange = {
+          patchNum: 1,
+        };
+        assert.equal(
+            element._computeDiffURL(change, patchRange, path, false),
+            '/c/gerrit/+/1/1//COMMIT_MSG');
+      });
+
+      test('diff url commit msg', () => {
+        sandbox.stub(Gerrit.Nav, 'getUrlForDiff').returns(
+            '/c/gerrit/+/1/1//COMMIT_MSG');
+        const change = {
+          _number: 1,
+          project: 'gerrit',
+        };
+        const path = '/COMMIT_MSG';
+        const patchRange = {
+          patchNum: 1,
+        };
+        assert.equal(
+            element._computeDiffURL(change, patchRange, path, false),
+            '/c/gerrit/+/1/1//COMMIT_MSG');
+      });
+    });
+
     suite('size bars', () => {
       test('_computeSizeBarLayout', () => {
         assert.isUndefined(element._computeSizeBarLayout(null));
