Support loading for button and allow event listener to set it
currently gr-button supports `loading` but did not use it, this change will:

1. use disabled status when loading
2. add a spinner to show when loading is true
3. in repo-access component, set loading to true while promise ongoing
4. also fix the issue with non-zero initial tabindex for gr-button

screenshot: https://imgur.com/a/NCLwb45

Bug: 12421
Change-Id: Ie69c447455d23a118dbe1823c576144e0bca7c2d

--- a/polygerrit-ui/app/elements/shared/gr-button/gr-button.html
+++ b/polygerrit-ui/app/elements/shared/gr-button/gr-button.html
@@ -137,7 +137,7 @@ limitations under the License.
 
       /* Keep below color definition for primary so that this takes precedence
         when disabled. */
-      :host([disabled]) {
+      :host([disabled]), :host([loading]) {
         --background-color: var(--disabled-button-background-color);
         --text-color: var(--deemphasized-text-color);
         cursor: default;
@@ -149,7 +149,8 @@ limitations under the License.
         --margin: 0;
         --padding: 5px 4px;
       }
-      :host([disabled][link]) {
+      :host([disabled][link]),
+      :host([loading][link]) {
         --background-color: transparent;
         --text-color: var(--deemphasized-text-color);
         cursor: default;
@@ -173,8 +174,11 @@ limitations under the License.
     </style>
     <paper-button
         raised="[[!link]]"
-        disabled="[[_computeDisabled(disabled, loading)]]"
+        disabled="[[_disabled]]"
         tabindex="-1">
+      <template is="dom-if" if="[[loading]]">
+        <span class="loadingSpin"></span>
+      </template>
       <slot></slot>
       <i class="downArrow"></i>
     </paper-button>
