Show summary on change header when overlength
When change title is a bit longer, the header is occuping
too much vertical space on small screens.

Change-Id: I5bc091e39f870bf76949ad009abf47370a7c7d0b

--- a/polygerrit-ui/app/elements/change/gr-change-view/gr-change-view.html
+++ b/polygerrit-ui/app/elements/change/gr-change-view/gr-change-view.html
@@ -93,6 +93,9 @@ limitations under the License.
         flex: 1;
       }
       .headerSubject {
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
         font-family: var(--header-font-family);
         font-size: var(--font-size-h3);
         font-weight: var(--font-weight-h3);
